docs: update provider recovery and dialogue design notes